--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.2</version>
+        <version>3.4.4</version>
         <relativePath/>
     </parent>
 
@@ -194,7 +194,7 @@
     </dependencies>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <common.version>3.2024.04.10_12.03-fddb587e3a68</common.version>
 
         <!-- LOGGING -->
@@ -205,6 +205,7 @@
         <wiremock.version>3.0.0-beta-3</wiremock.version>
         <commons-io.version>2.11.0</commons-io.version>
         <commons-lang.version>3.12.0</commons-lang.version>
+        <okhttp.version>4.12.0</okhttp.version>
     </properties>
 
 
@@ -374,7 +375,7 @@
 
             <dependency>
                 <groupId>io.micrometer</groupId>
-                <artifactId>micrometer-core</artifactId>
+                <artifactId>mmicrometer-registry-prometheus</artifactId>
             </dependency>
 
 
